# PSXBMPPacker

./: .gitignore  :w  CMakeLists.txt  README.md  config.ini
include/: bitmap_image.hpp  color.hpp  color_lookup_table.hpp  data_pack.hpp  packer_config.hpp  pixel_data.hpp  utils.hpp
src/: bitmap_image.cpp  color.cpp  color_lookup_table.cpp  data_pack.cpp  main.cpp  packer_config.cpp  pixel_data.cpp  utils.cpp
